# TinyCitadel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
assets/shaders/: triangle.frag  triangle.vert
docs/: Implementation_Guide.md  PSO_Design_Strategy.md  TODO.md  requirements.md
physics/: CMakeLists.txt
physics/include/CitadelPhysicsEngine2D/: AABB.h  MathTypes.h  core.h
physics/include/CitadelPhysicsEngine2D/math/: EngineMath.h
physics/include/CitadelPhysicsEngine2D/shapes/: AABB.h  Circle.h  Shapes.h
physics/src/: AABB.cpp  MathTypes.cpp  PhysicsTests.cpp  core.cpp
physics/src/math/: EngineMath.cpp
physics/src/shapes/: AABB.cpp  Circle.cpp  Shapes.cpp
src/: main.cpp  pch.h
src/core/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp
src/renderer/: Mesh.h  Renderer.cpp  Renderer.h  ShapeFactory.cpp  ShapeFactory.h  ShapeRenderer.cpp  ShapeRenderer.h
src/utils/: FileUtils.cpp  FileUtils.h
